<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_medium"
    tools:context="com.sybus.android.userapp.ui.fragments.HomeSearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/search_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:paddingLeft="8dp"
            android:layout_marginTop="2dp"
            android:background="#99FFFFFF">

            <SearchView
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:paddingLeft="-18dp"
                android:id="@+id/searchView"
                android:layout_marginBottom="4dp"
                android:iconifiedByDefault="false"
                android:layout_weight="0.75"
                android:queryHint="Enter destination..."/>

            <ProgressBar
                android:id="@+id/search_view_loading_indicator"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="12dp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/home_search_button"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="0.25"
                android:text="Find" />

        </LinearLayout>


        <!--Search view with suggestion, auto complete text view-->
        <!--<LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.sybus.android.userapp.ui.adapters.DelayAutoCompleteTextView
                android:id="@+id/home_destination_search_field"
                android:inputType="textAutoComplete|textCapSentences"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:hint="Enter Destination..."
                android:imeOptions="flagNoExtractUi|actionSearch"/>

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="12dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/home_search_button"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="0.22"
                android:text="Find" />

        </LinearLayout> -->


        <RelativeLayout
            android:id="@+id/layout_home_page_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:background="@drawable/rectangular_layout_shadow_effect">

            <!--using image view instead of SettingActivity background on relative layout so that we can implement bitmat and cache-->
            <ImageView
                android:id="@+id/home_page_imag"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/home_bg"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="SYBUS"
                android:textColor="@color/primary_text_light"
                android:textSize="36dp"
                android:layout_marginTop="12dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView"
                android:layout_alignBottom="@+id/textView"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:text="  SAJHA YATAYAT"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />


            <TextView
                android:id="@+id/search_description"
                android:layout_width="fill_parent"
                android:layout_height="18dip"
                android:gravity="center"
                android:singleLine="true"
                android:background="#33FFFFFF"
                android:text="@string/search_description"
                android:textColor="@color/screen_background_medium"
                android:textSize="6pt"
                android:layout_alignBottom="@+id/home_page_imag"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <View
                android:id="@+id/divider_search"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/divider_medium"
                android:layout_below="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="8dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:paddingTop="6dp">


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/divider_medium" />

       <!-- <LinearLayout
            android:id="@+id/more_options"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/primary"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:text="MORE OPTIONS TO FIND A BUS"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout> -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="FIND A BUS WITH MORE OPTION" />


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scorll_view_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="0.5">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="1">

                <!--First Row line-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <!--First column-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="#B3FFFFFF">

                        <RelativeLayout
                            android:id="@+id/search_option_route"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rectangular_layout_shadow_effect"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="5dp"
                            android:paddingTop="5dp"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/search_more_option1_title"
                                    android:textColor="@color/primary_text"
                                    android:textSize="7pt"
                                    android:textStyle="bold" />


                                <View
                                    android:layout_width="wrap_content"
                                    android:layout_height="1dp"
                                    android:layout_marginBottom="2dp"
                                    android:background="@color/divider_medium" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="24dp"
                                android:gravity="fill"
                                android:text="@string/search_more_option1_detail"
                                android:textSize="5pt" />


                        </RelativeLayout>
                    </LinearLayout>

                    <!--Second column-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="#B3FFFFFF">

                        <RelativeLayout
                            android:id="@+id/search_option_stop"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rectangular_layout_shadow_effect"
                            android:clickable="true"
                            android:orientation="vertical"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="5dp"
                            android:paddingTop="5dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/search_more_option2_title"
                                    android:textColor="@color/primary_text"
                                    android:textSize="7pt"
                                    android:textStyle="bold" />


                                <View
                                    android:layout_width="wrap_content"
                                    android:layout_height="1dp"
                                    android:layout_marginBottom="2dp"
                                    android:background="@color/divider_medium" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:layout_marginTop="24dp"
                                android:gravity="fill"
                                android:text="@string/search_more_option2_detail"
                                android:textSize="5pt" />


                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="8dp"
                        android:id="@+id/imageView"
                        android:layout_gravity="center"
                        android:src="@drawable/app_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="SAJHA YATAYAT VEHICLE TRACKING AND MANAGEMENT SYSTEM"
                        android:id="@+id/textView9" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/divider_medium"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"/>
                </LinearLayout>


            </GridLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:weightSum="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">

                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:id="@+id/route_list"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        android:layout_weight="0.88"
                        android:popupBackground="#33FFFFFF"
                        android:padding="0dp"/>

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_gravity="right"
                        android:padding="8dp"
                        android:layout_weight="0.12"
                        android:background="@drawable/search_btn_bg"/>
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/divider_medium" />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:id="@+id/busStop_list"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        android:layout_weight="0.88"
                        android:popupBackground="#33FFFFFF"
                        android:padding="0dp"/>

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_gravity="right"
                        android:padding="8dp"
                        android:layout_weight="0.12"
                        android:background="@drawable/search_btn_bg"/>
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/divider_medium" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="SAJHA YATAYAT VEHICLE TRACKING AND MANAGEMENT SYSTEM"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>-->


        </ScrollView>

    </LinearLayout>

</RelativeLayout>
